// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapCardFake.vue should render by default the simpleMapCardFake 1`] = `
<div>
  <simplemapcardfake-stub visiblesections="description,privacy,lastModification,tags"></simplemapcardfake-stub>
</div>
`;

exports[`MapCardFake.vue should render the condensedMapCardFake if condensed is true 1`] = `
<div>
  <condensedmapcardfake-stub></condensedmapcardfake-stub>
</div>
`;

exports[`MapCardFake.vue should render the simpleMapCardFake if condensed is false 1`] = `
<div>
  <simplemapcardfake-stub visiblesections="description,privacy,lastModification,tags"></simplemapcardfake-stub>
</div>
`;
